--- a/core/templates/core/app/health.html
+++ b/core/templates/core/app/health.html
@@ -61,7 +61,7 @@
     </div>
     <div class="col-md-6" style="position: relative;">
         <div style="position: absolute;top: 16vh;">
-          <h1 class="feature-main-text"><span>Health</span></h1>
+          <h1 class="feature-main-text" style="text-align: left;"><span>Health</span></h1>
           <p class="feature-main-text-para">IMC Indore uses Blinklog for efficient stock control, <br>minimizing waste and optimizing inventory levels.</p>
       </div>
       </div>
