--- a/core/templates/core/app/welcome.html
+++ b/core/templates/core/app/welcome.html
@@ -7,7 +7,7 @@
   <div class="row"  style="width: 100%;">
     <div class="col-md-6">
       <div class="feature-text-div">
-        <h1 class="feature-main-text">IMC <span>Inventory</span></h1>
+        <h1 class="feature-main-text" style="text-align: left;">IMC <span>Inventory</span></h1>
         <p class="feature-main-text-para">IMC Indore uses Blinklog for efficient stock control, <br>minimizing waste and optimizing inventory levels.</p>
     </div>
     </div>
