--- a/core/templates/core/elements/navbar.html
+++ b/core/templates/core/elements/navbar.html
@@ -21,7 +21,7 @@
               <a class="nav-link" href="{% url 'userauths:sign-out' %}">Logout</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="admin/">Admin Pannel</a>
+                <a class="nav-link" href="admin/">Main Admin Pannel</a>
             </li>
           </ul>
           <form class="d-flex mt-3" role="search">
