--- a/userauths/templates/userauths/app/sign-in.html
+++ b/userauths/templates/userauths/app/sign-in.html
@@ -57,7 +57,7 @@
                             <div class="form-check">
                                 <input class="form-check-btn" type="radio" name="radio-selection" id="verifier_radio"
                                     value="verifier-checked">
-                                <span class="form-check-label" for="verifier_radio">Verifier</span>
+                                <span class="form-check-label" for="verifier_radio">Admin</span>
                             </div>
                         </div>
 
