added all pages related task

--- a/core/templates/core/app/welcome.html
+++ b/core/templates/core/app/welcome.html
@@ -66,12 +66,14 @@
         </div>
         <div class="feature col-md-12">
           <div class="feature-content-odd feature-content-odd2">
-            <div class="main-text-li">
-              <span class="text-features">Education</span>
-              <div style="display: flex;align-items: center;justify-content: center;">
-                <img style="width: 10em;" src="../../../static/core/image/edu.svg" alt="" style="margin-top: 0;">
+            <a href="{% url 'core:workforce' %}">
+              <div class="main-text-li">
+                <span class="text-features">WorkForce</span>
+                <div style="display: flex;align-items: center;justify-content: center;">
+                  <img style="width: 10em;" src="../../../static/core/image/workforce.svg" alt="" style="margin-top: 0;">
+                </div>
               </div>
-            </div>
+            </a>
           </div>
         </div>
       </div>
